Fix unwanted horizontal scrollbar whitespace problem

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,6 +20,7 @@ body {
     font-family: "Poppins", sans-serif;
     margin: 0;
     background: white;
+    overflow-x: hidden;
 }
 
 #navbar {
